@@ -17,10 +17,10 @@ import com.almende.eve.agent.log.EventLogger;
 import com.almende.eve.config.Config;
 import com.almende.eve.context.Context;
 import com.almende.eve.context.ContextFactory;
-import com.almende.eve.json.JSONRPC;
-import com.almende.eve.json.JSONRPCException;
-import com.almende.eve.json.JSONRequest;
-import com.almende.eve.json.JSONResponse;
+import com.almende.eve.rpc.jsonrpc.JSONRPC;
+import com.almende.eve.rpc.jsonrpc.JSONRPCException;
+import com.almende.eve.rpc.jsonrpc.JSONRequest;
+import com.almende.eve.rpc.jsonrpc.JSONResponse;
 import com.almende.eve.scheduler.Scheduler;
 import com.almende.eve.transport.AsyncCallback;
 import com.almende.eve.transport.TransportService;
