@@ -92,9 +92,9 @@ import com.almende.eve.entity.activity.Attendee.RESPONSE_STATUS;
 import com.almende.eve.entity.activity.Preference;
 import com.almende.eve.entity.activity.Status;
 import com.almende.eve.entity.calendar.AgentData;
-import com.almende.eve.json.JSONRPCException;
-import com.almende.eve.json.JSONRequest;
-import com.almende.eve.json.jackson.JOM;
+import com.almende.eve.rpc.jsonrpc.JSONRPCException;
+import com.almende.eve.rpc.jsonrpc.JSONRequest;
+import com.almende.eve.rpc.jsonrpc.jackson.JOM;
 import com.almende.util.IntervalsUtil;
 import com.almende.util.WeightsUtil;
 import com.fasterxml.jackson.core.JsonParseException;
