@@ -71,9 +71,9 @@ import com.almende.eve.agent.annotation.Required;
 import com.almende.eve.context.Context;
 import com.almende.eve.entity.calendar.Authorization;
 
-import com.almende.eve.json.JSONRPCException;
-import com.almende.eve.json.JSONRPCException.CODE;
-import com.almende.eve.json.jackson.JOM;
+import com.almende.eve.rpc.jsonrpc.JSONRPCException;
+import com.almende.eve.rpc.jsonrpc.JSONRPCException.CODE;
+import com.almende.eve.rpc.jsonrpc.jackson.JOM;
 import com.almende.eve.config.Config;
 import com.almende.util.HttpUtil;
 import com.almende.util.IntervalsUtil;
