@@ -34,7 +34,7 @@ import java.security.NoSuchAlgorithmException;
 
 import com.almende.eve.agent.Agent;
 import com.almende.eve.agent.annotation.Name;
-import com.almende.eve.json.jackson.JOM;
+import com.almende.eve.rpc.jsonrpc.jackson.JOM;
 import com.almende.util.HttpUtil;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
