@@ -9,6 +9,7 @@ http://almende.github.com/eve/
   eve.agent.annotation.
 - Renamed "services" to "transport". XmppService is now called 
   XmppTransportService, HttpService is now called HttpTransportService.
+- Moved JSONRPC classes to com.almende.eve.rpc.jsonrpc.
 - Removed Session objects.
 - Fixed requiring a sender for all calls via the AgentFactory.
 - Fixed method hasInterface not finding extended interfaces.
